<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/turnOffAfter"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtHour"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:gravity="center"
            android:hint="@string/hour"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/zero"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/hour"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/twoDots"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtMinute"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:gravity="center"
            android:hint="@string/minute"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/zero"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/minute"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTime"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"

            />
    </LinearLayout>
</RelativeLayout>